[package]
name = "dockny"
version = "0.1.0"
edition = "2021"
authors = [
    """
    https://github.com/AlexeyNavalniyPrinted
    https://github.com/fywws
    """
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
crossterm = { version = "0.27.0" }
docker-compose-types = "0.7.1"
serde_yaml = "0.9.32"
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"
indexmap = "2.2.3"
